<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4 The People Podcasts</string>

    <string name="tab_home">Home</string>
    <string name="tab_explore">Explore</string>
    <string name="tab_activity">Activity</string>

    <string name="new_episodes">New episodes</string>
    <string name="new_episodes_count">%1$d new episodes</string>
    <string name="channel_new_episodes">New episodes</string>

    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="download">Download</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="playback_speed">Playback speed</string>

    <string name="shortcut_resume_short">Resume</string>
    <string name="shortcut_resume_long">Resume where you left off</string>
    <string name="shortcut_new_short">New episodes</string>
    <string name="shortcut_new_long">See new episodes</string>
    <string name="shortcut_queue_short">Queue</string>
    <string name="shortcut_queue_long">Open your queue</string>
    <string name="shortcut_explore_short">Explore</string>
    <string name="shortcut_explore_long">Find a show</string>
</resources>
